Visual Overhaul. Moved from Bootstrap -> Tailwind

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Local Music Streamer</h1>
-    <p>Will eventually show recently played, in a grid-like format</p>
+    <h1 class="text-4xl text-white font-bold text-center p-2">Local Music Streamer</h1>
+    <p class="text-white">Will eventually show recently played, in a grid-like format</p>
 </div>
