--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,54 +4,50 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - LocalMusicStreamer</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/LocalMusicStreamer.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/tailwind.css" asp-append-version="true"/>
+    <link href="~/css/output.css" rel="stylesheet">
 </head>
-<body>
+<body class="min-h-screen flex flex-col">
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LocalMusicStreamer</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    <nav class="bg-gray-500 bg-opacity-30 shadow text-xl rounded-2xl m-2">
+        <div class="container mx-auto px-4 py-4 flex justify-center items-center">
+            <a class="font-semibold text-white mr-6" asp-area="" asp-controller="Home" asp-action="Index">LocalMusicStreamer</a>
+            <div class="hidden lg:flex space-x-6">
+                <ul class="flex space-x-6">
+                    <li>
+                        <a class="text-white hover:underline" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Upload" asp-action="Index">Upload</a>
+                    <li>
+                        <a class="text-white hover:underline" asp-area="" asp-controller="Upload" asp-action="Index">Upload</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Library" asp-action="Index">Library</a>
+                    <li>
+                        <a class="text-white hover:underline" asp-controller="Library" asp-action="Index">Library</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Playlists" asp-action="Index">Playlists</a>
+                    <li>
+                        <a class="text-white hover:underline" asp-controller="Playlists" asp-action="Index">Playlists</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<div class="container">
-    <main role="main" class="pb-3">
+
+<div class="container mx-auto px-4 flex-grow">
+    <main role="main" class="py-4">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        <audio controls>
+<footer class="text-gray-600 bg-transparent py-4">
+    <div class="container mx-auto px-4">
+        <audio controls class="w-full backdrop-blur-lg rounded-2xl shadow-lg shadow-black">
             <source src="" type="audio/flac">
             <source src="" type="audio/mp3">
         </audio>
     </div>
 </footer>
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
