--- a/Views/Upload/Index.cshtml
+++ b/Views/Upload/Index.cshtml
@@ -2,12 +2,18 @@
     ViewData["Title"] = "Upload";
 }
 
-<h1>Upload</h1>
+<h1 class="text-4xl text-white font-bold text-center mb-6">Upload</h1>
 
-<form method="post" enctype="multipart/form-data" action="/Upload/UploadFile">
-    <div class="mb-3">
-        <label for="fileInput" class="form-label">Choose File</label>
-        <input type="file" class="form-control" id="fileInput" name="file" />
-    </div>
-    <button type="submit" class="btn btn-primary">Upload</button>
-</form>
+<div class="flex justify-center">
+    <form method="post" enctype="multipart/form-data" action="/Upload/UploadFile" class="w-full max-w-md bg-gray-800 bg-opacity-30 p-6 rounded-lg shadow-lg">
+        <div class="mb-4">
+            <label for="fileInput" class="block text-white text-sm font-bold mb-2">Select a file to upload:</label>
+            <input type="file" class="border-2 border-gray-600 rounded w-full py-2 px-3 text-gray-200 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" id="fileInput" name="file" />
+        </div>
+        <div class="flex justify-center">
+            <button type="submit" class="bg-gray-600 p-2 hover:bg-gray-400 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                Upload
+            </button>
+        </div>
+    </form>
+</div>
