--- a/Views/Playlists/Index.cshtml
+++ b/Views/Playlists/Index.cshtml
@@ -14,7 +14,7 @@
                    class="border border-gray-600 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" />
         </div>
         <div class="flex justify-center">
-            <button type="submit" class="bg-gray-600 p-2 hover:bg-gray-400 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <button type="submit" class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 Create
             </button>
         </div>
