--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,10 +40,28 @@
 
 <footer class="text-gray-600 bg-transparent py-4">
     <div class="container mx-auto px-4">
-        <audio controls class="w-full backdrop-blur-lg rounded-2xl shadow-lg shadow-black">
-            <source src="" type="audio/flac">
-            <source src="" type="audio/mp3">
-        </audio>
+        <div id="audioControls" class="flex items-center justify-between">
+            <!-- SVG Icon Source: https://tailwindtoolbox.com/icons -->
+            <button id="skipBackward" onclick="skipBackward()" class="text-xl hover:bg-gray-500">
+                <svg class="h-8 w-8 text-white bg-gray-700 p-1 rounded" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polygon points="19 20 9 12 19 4 19 20"/>
+                    <line x1="5" y1="19" x2="5" y2="5"/>
+                </svg>
+            </button>
+
+            <audio id="audioPlayer" controls class="w-full mx-4 rounded-2xl shadow-lg shadow-black">
+                <source src="" type="audio/flac">
+                <source src="" type="audio/mp3">
+            </audio>
+
+            <!-- SVG Icon Source: https://tailwindtoolbox.com/icons -->
+            <button id="skipForward" onclick="skipForward()" class="text-xl hover:bg-gray-500">
+                <svg class="h-8 w-8 text-white bg-gray-700 p-1 rounded" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polygon points="5 4 15 12 5 20 5 4"/>
+                    <line x1="19" y1="5" x2="19" y2="19"/>
+                </svg>
+            </button>
+        </div>
     </div>
 </footer>
 
